# engram-desktop-view

./: .gitignore  .npmrc  CLAUDE.md  INSTALL.md  README.md  SDD-PLAN.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: electron.yml  release.yml
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/src/: App.tsx.html  index.html
dist-electron/: api.js  api.js.map  main.js  main.js.map  preload.cjs  preload.cjs.map  preload.js  preload.js.map
electron/: main.ts  preload.ts
openspec/: config.yaml
release/: INSTALL.md  README.md
scripts/: build-electron.cjs  convert-icon.cjs  generate-icons.cjs  nsis-template.nsi
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  KeyboardShortcutsModal.tsx  SyncIndicator.tsx
src/config/: axios.ts  electronApi.ts  engramApiDirect.ts  tauriApi.ts
src/hooks/: useCompactProjects.ts  useCompactSessions.ts  useEngram.ts  useKeyboardShortcuts.ts  useSidebar.ts  useToast.ts
src/i18n/: index.ts
src/locales/: en.json  es.json  pt.json
src/pages/: Dashboard.tsx  EmptySessionsTab.tsx  HomeTab.tsx  MemoriesTab.tsx  ProjectsTab.tsx  PromptsTab.tsx  SessionCompare.tsx  SessionDetail.tsx  (+3 more)
tests/: setup.ts
(+181 files in other folders)
